-------------------------------------------------------------------------------
Changes in version 1.002

- Added crypto hash libraries (MD5, SHA1, SHA256, SHA512).

- Removed the silly trailing "." from the common message output code.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.001

- Moved the file destination to /usr/local/bglibs/*
  from /usr/local/*/bglibs
- Added missing pwcmp/client include & library.
- Added missing uint32.h and uint64.h targets.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------