@@ -3,6 +3,9 @@ Changes in version 1.002
 
 - Added crypto hash libraries (MD5, SHA1, SHA256, SHA512).
 
+- Added a dict_foreach routine for iterating over the contents of a
+  dictionary.
+
 - Removed the silly trailing "." from the common message output code.
 
 Development of this version has been sponsored by FutureQuest, Inc.
